# byteorder

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bench/: BatchSwapBench.cpp  ByteOrderBench.cpp  CMakeLists.txt
cmake/: Coverage.cmake  Dependencies.cmake  FindGBenchmark.cmake  FindGTest.cmake
cmake/configs/: Config.h.in
docs/: CMakeLists.txt
examples/: CMakeLists.txt  basic_usage.cpp  batch_operations.cpp  network_protocol.cpp
include/byteorder/: byteorder.h
src/: main.cpp
test/: BatchOperationsTest.cpp  ByteOrderTest.cpp  CMakeLists.txt
